--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet">
+  rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -16,9 +16,9 @@
     <nav >
       <a class="header-logo" href="./index.html">Web<span class="header-logo-black">Studio</span></a>
       <ul class="info-list">
-        <li class="item"><a class="link" href="#">Studio</a></li>
-        <li class="item"><a class="link" href="#">Portfolio</a></li>
-        <li class="item"><a class="link" href="#">Contacts</a></li>
+        <li class="item"><a class="link" href="./index.html">Studio</a></li>
+        <li class="item"><a class="link" href="">Portfolio</a></li>
+        <li class="item"><a class="link" href="">Contacts</a></li>
       </ul>
     </nav>
     <address class="address">
